--- a/SimpleApp/Info.plist
+++ b/SimpleApp/Info.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
-	<string>edu.oscarbjorkman.$(PRODUCT_NAME:rfc1034identifier)</string>
+	<string>edu.oscarbjorkman.Wanna-Help</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
