--- a/SimpleApp/Info.plist
+++ b/SimpleApp/Info.plist
@@ -32,7 +32,7 @@
 	<key>FacebookAppID</key>
 	<string>866603720072350</string>
 	<key>FacebookDisplayName</key>
-	<string>Wanna Help?</string>
+	<string>helpr</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>UILaunchStoryboardName</key>
